// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify render tests basic component tests should generate a simple box component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { EscapeHatchProps, View, getOverrideProps } from \\"@aws-amplify/ui-react\\";

export type TestProps = {} & {
    overrides?: EscapeHatchProps | undefined | null;
};
export default function Test(props: TestProps): JSX.Element {
    return (<View fontFamily=\\"Times New Roman\\" fontSize=\\"20px\\" {...props} {...getOverrideProps(props.overrides, \\"View\\")}></View>);
}"
`;

exports[`amplify render tests basic component tests should generate a simple button component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { Button, EscapeHatchProps, getOverrideProps } from \\"@aws-amplify/ui-react\\";

export type CustomButtonProps = {} & {
    overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomButton(props: CustomButtonProps): JSX.Element {
    return (<Button color=\\"#ff0000\\" width=\\"20\\" {...props} {...getOverrideProps(props.overrides, \\"Button\\")}></Button>);
}"
`;

exports[`amplify render tests basic component tests should generate a simple text component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { EscapeHatchProps, Text, getOverrideProps } from \\"@aws-amplify/ui-react\\";

export type CustomTextProps = {} & {
    overrides?: EscapeHatchProps | undefined | null;
};
export default function CustomText(props: CustomTextProps): JSX.Element {
    return (<Text color=\\"#ff0000\\" width=\\"20px\\" value=\\"Text Value\\" {...props} {...getOverrideProps(props.overrides, \\"Text\\")}>Text Value</Text>);
}"
`;

exports[`amplify render tests complex component tests should generate a button within a box component 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { Button, EscapeHatchProps, View, getOverrideProps } from \\"@aws-amplify/ui-react\\";

export type BoxWithButtonProps = {} & {
    overrides?: EscapeHatchProps | undefined | null;
};
export default function BoxWithButton(props: BoxWithButtonProps): JSX.Element {
    return (<View {...props} {...getOverrideProps(props.overrides, \\"View\\")}><Button color=\\"#ff0000\\" width=\\"20px\\" {...props} {...getOverrideProps(props.overrides, \\"Button\\")}></Button></View>);
}"
`;

exports[`amplify render tests complex component tests should generate a component with custom child 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { CustomButton, EscapeHatchProps, View, findChildOverrides, getOverrideProps } from \\"@aws-amplify/ui-react\\";

export type BoxWithCustomButtonProps = {} & {
    overrides?: EscapeHatchProps | undefined | null;
};
export default function BoxWithCustomButton(props: BoxWithCustomButtonProps): JSX.Element {
    return (<View {...props} {...getOverrideProps(props.overrides, \\"View\\")}><CustomButton color=\\"#ff0000\\" width=\\"20px\\" {...findChildOverrides(props.overrides, \\"CustomButton\\")}></CustomButton></View>);
}"
`;

exports[`amplify render tests complex component tests should generate a component with exposeAs prop 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { Button, EscapeHatchProps, View, getOverrideProps } from \\"@aws-amplify/ui-react\\";

export type BoxWithButtonProps = {} & {
    overrides?: EscapeHatchProps | undefined | null;
};
export default function BoxWithButton(props: BoxWithButtonProps): JSX.Element {
    return (<View {...props} {...getOverrideProps(props.overrides, \\"View\\")}><Button color=\\"#ff0000\\" width=\\"20px\\" {...props} {...getOverrideProps(props.overrides, \\"Button\\")}></Button></View>);
}"
`;

exports[`amplify render tests component with data binding should add model imports 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { User } from \\"../models\\";
import { Button, EscapeHatchProps, getOverrideProps } from \\"@aws-amplify/ui-react\\";

export type ComponentWithDataBindingProps = {
    width: Number;
    isDisabled: Boolean;
    buttonUser?: User;
    buttonColor: String;
} & {
    overrides?: EscapeHatchProps | undefined | null;
};
export default function ComponentWithDataBinding(props: ComponentWithDataBindingProps): JSX.Element {
    return (<Button label={buttonUser.username || \\"hspain@gmail.com\\"} labelWidth={width} disabled={isDisabled} {...props} {...getOverrideProps(props.overrides, \\"Button\\")}></Button>);
}"
`;

exports[`amplify render tests sample code snippet tests should generate a sample code snippet for components 1`] = `
"/* eslint-disable */
import React from \\"react\\";
import { CustomButton, EscapeHatchProps, View, findChildOverrides, getOverrideProps } from \\"@aws-amplify/ui-react\\";

export type BoxWithButtonProps = {} & {
    overrides?: EscapeHatchProps | undefined | null;
};
export default function BoxWithButton(props: BoxWithButtonProps): JSX.Element {
    return (<View padding-left {...props} {...getOverrideProps(props.overrides, \\"View\\")}><CustomButton color=\\"#ff0000\\" width=\\"20px\\" buttonText=\\"Click Me\\" {...findChildOverrides(props.overrides, \\"CustomButton\\")}></CustomButton></View>);
}"
`;
